--- a/index.html
+++ b/index.html
@@ -56,54 +56,114 @@
                     
                     <div class="hero__items">
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-01">
-                                </use>
+                            <svg class="hero__item-icon" width="64" height="73" viewBox="0 0 64 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M60 39.5V25C60 11.7452 49.2548 1 36 1H28C14.7452 1 4 11.7452 4 25V39.5" stroke-width="2"/>
+                                <path d="M55 31V39C55 51.7025 44.7025 62 32 62C19.2975 62 9 51.7025 9 39V31C9 18.2975 19.2975 8 32 8C44.7025 8 55 18.2975 55 31Z" stroke-width="2"/>
+                                <path d="M29.5 70.5L36 70.5C49.2548 70.5 60 59.7548 60 46.5L60 36" stroke-width="2"/>
+                                <rect x="1" y="32" width="6" height="14" rx="3" stroke-width="2"/>
+                                <rect x="57" y="32" width="6" height="14" rx="3" stroke-width="2"/>
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-02">
-                                </use>
+                            <svg class="hero__item-icon" fill="none" viewBox="0 0 74 86" id="hero-02" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="31.69" cy="73.411" r="7" transform="rotate(-15 31.69 73.41)" stroke-width="2" />
+                                <path stroke-width="2" d="M30.997 32.185l28.978-7.765 7.764 28.978-28.978 7.765z" />
+                                <g filter="url(#efilter0_d)">
+                                    <path stroke="#00C368" stroke-width="2" d="M43.105 31.011l5.795-1.553 2.071 7.728-5.796 1.552z" />
+                                </g>
+                                <defs>
+                                    <filter id="efilter0_d" x="39.88" y="26.234" width="18.316" height="19.73" filterUnits="userSpaceOnUse"
+                                        color-interpolation-filters="sRGB">
+                                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                        <feColorMatrix in="SourceAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                        <feOffset dx="2" dy="2" />
+                                        <feGaussianBlur stdDeviation="2" />
+                                        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.764706 0 0 0 0 0.407843 0 0 0 0.4 0" />
+                                        <feBlend in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                        <feBlend in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                                    </filter>
+                                </defs>
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-03">
-                                </use>
+                            <svg class="hero__item-icon" fill="none" viewBox="0 0 97 87" id="hero-03" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.16 61.542c-5.857-5.858-5.857-15.355 0-21.213l25.554-25.553c5.858-5.858 15.355-5.858 21.213 0l4.448 4.448c6.364 6.364 5.74 16.899-1.145 22.78-3.85 3.29-7.849 6.845-11.044 10.005-3.74 3.7-7.974 8.436-11.789 12.888-5.884 6.866-16.406 7.475-22.762 1.119l-4.474-4.474z"
+                                    stroke-width="2" />
+                                <path
+                                    d="M13.136 59.287c-5.37-5.37-5.872-13.882-1.01-19.666 4.383-5.212 9.662-11.246 14.176-15.71 3.978-3.935 9.252-8.521 13.933-12.44 5.785-4.843 14.285-4.332 19.647 1.03l.4.4c6.365 6.364 5.74 16.899-1.145 22.78-3.85 3.29-7.848 6.845-11.043 10.005-3.74 3.7-7.975 8.436-11.79 12.888-5.883 6.866-16.406 7.475-22.762 1.12l-.406-.407z"
+                                    stroke-width="2" />
+                                <rect x="34.152" y="26.767" width="15.665" height="15.665" rx="7.833" transform="rotate(-45 34.152 26.767)"
+                                    stroke-width="2" />
+                                <rect x="69.5" y="64" width="26" height="22" rx="1" stroke-width="2" />
+                                <path d="M71.5 41c7 2 11 5 11 15.999" stroke-width="2" />
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-02">
-                                </use>
+                            <svg class="hero__item-icon" fill="none" viewBox="0 0 74 86" id="hero-02" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="31.69" cy="73.411" r="7" transform="rotate(-15 31.69 73.41)" stroke-width="2" />
+                                <path stroke-width="2" d="M30.997 32.185l28.978-7.765 7.764 28.978-28.978 7.765z" />
+                                <g filter="url(#efilter0_d)">
+                                    <path stroke="#00C368" stroke-width="2" d="M43.105 31.011l5.795-1.553 2.071 7.728-5.796 1.552z" />
+                                </g>
+                                <defs>
+                                    <filter id="efilter0_d" x="39.88" y="26.234" width="18.316" height="19.73" filterUnits="userSpaceOnUse"
+                                        color-interpolation-filters="sRGB">
+                                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                        <feColorMatrix in="SourceAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                        <feOffset dx="2" dy="2" />
+                                        <feGaussianBlur stdDeviation="2" />
+                                        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.764706 0 0 0 0 0.407843 0 0 0 0.4 0" />
+                                        <feBlend in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                        <feBlend in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                                    </filter>
+                                </defs>
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-01">
-                                </use>
+                            <svg class="hero__item-icon" width="64" height="73" viewBox="0 0 64 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M60 39.5V25C60 11.7452 49.2548 1 36 1H28C14.7452 1 4 11.7452 4 25V39.5" stroke-width="2"/>
+                                <path d="M55 31V39C55 51.7025 44.7025 62 32 62C19.2975 62 9 51.7025 9 39V31C9 18.2975 19.2975 8 32 8C44.7025 8 55 18.2975 55 31Z" stroke-width="2"/>
+                                <path d="M29.5 70.5L36 70.5C49.2548 70.5 60 59.7548 60 46.5L60 36" stroke-width="2"/>
+                                <rect x="1" y="32" width="6" height="14" rx="3" stroke-width="2"/>
+                                <rect x="57" y="32" width="6" height="14" rx="3" stroke-width="2"/>
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                             </div>
                         </div>
                         <div class="hero__item">
-                            <svg class="hero__item-icon">
-                                <use xlink:href="icons/icons.svg#hero-06">
-                                </use>
+                            <svg class="hero__item-icon" fill="none" viewBox="0 0 57 72" id="hero-06" xmlns="http://www.w3.org/2000/svg">
+                                <rect x="1.5" y="1" width="54" height="70" rx="3" stroke-width="2" />
+                                <path d="M9.5 1h38v5a3 3 0 01-3 3h-32a3 3 0 01-3-3V1z" stroke-width="2" />
+                                <g filter="url(#gfilter0_d)">
+                                    <path d="M9.5 57a3 3 0 013-3h32a3 3 0 013 3v2a3 3 0 01-3 3h-32a3 3 0 01-3-3v-2z" stroke="#00C368"
+                                        stroke-width="2" />
+                                </g>
+                                <defs>
+                                    <filter id="gfilter0_d" x="6.5" y="51" width="48" height="18" filterUnits="userSpaceOnUse"
+                                        color-interpolation-filters="sRGB">
+                                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                        <feColorMatrix in="SourceAlpha" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                        <feOffset dx="2" dy="2" />
+                                        <feGaussianBlur stdDeviation="2" />
+                                        <feColorMatrix values="0 0 0 0 0 0 0 0 0 0.764706 0 0 0 0 0.407843 0 0 0 0.4 0" />
+                                        <feBlend in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                        <feBlend in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                                    </filter>
+                                </defs>
                             </svg>
                             <div class="hero__item-text">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -124,46 +184,46 @@
                             <p>Porro ab rerum omnis magnam eligendi error nobis dolore?</p>
                             <div class="second__saving-accordion accordion">
                                 <div class="accordion__items">                                
-                                    <details class="accordion__item">
-                                        <summary class="accordion__item-title">
+                                    <div class="accordion__item">
+                                        <div class="accordion__item-title">
                                             Lorem ipsum, dolor sit amet adipisicing elit.
-                                        </summary>
+                                        </div>
                                         <div class="accordion__item-text">
                                             <p>Laboriosam quas, aut consectetur animi autem aliquid consequuntur suscipit exercitationem laborum cupiditate magnam eaque quae delenit</p>
                                         </div>
-                                    </details> 
-                                    <details class="accordion__item">
-                                        <summary class="accordion__item-title">
+                                    </div> 
+                                    <div class="accordion__item">
+                                        <div class="accordion__item-title">
                                             Lorem ipsum, dolor sit amet adipisicing elit.
-                                        </summary>
+                                        </div>
                                         <div class="accordion__item-text">
                                             <p>Laboriosam quas, aut consectetur animi autem aliquid consequuntur suscipit exercitationem laborum cupiditate magnam eaque quae delenit</p>
                                         </div>
-                                    </details> 
-                                    <details class="accordion__item">
-                                        <summary class="accordion__item-title">
+                                    </div> 
+                                    <div class="accordion__item">
+                                        <div class="accordion__item-title">
                                             Lorem ipsum, dolor sit amet adipisicing elit.
-                                        </summary>
+                                        </div>
                                         <div class="accordion__item-text">
                                             <p>Laboriosam quas, aut consectetur animi autem aliquid consequuntur suscipit exercitationem laborum cupiditate magnam eaque quae delenit</p>
                                         </div>
-                                    </details> 
-                                    <details class="accordion__item">
-                                        <summary class="accordion__item-title">
+                                    </div> 
+                                    <div class="accordion__item">
+                                        <div class="accordion__item-title">
                                             Lorem ipsum, dolor sit amet adipisicing elit.
-                                        </summary>
+                                        </div>
                                         <div class="accordion__item-text">
                                             <p>Laboriosam quas, aut consectetur animi autem aliquid consequuntur suscipit exercitationem laborum cupiditate magnam eaque quae delenit</p>
                                         </div>
-                                    </details> 
-                                    <details class="accordion__item">
-                                        <summary class="accordion__item-title">
+                                    </div> 
+                                    <div class="accordion__item">
+                                        <div class="accordion__item-title">
                                             Lorem ipsum, dolor sit amet adipisicing elit.
-                                        </summary>
+                                        </div>
                                         <div class="accordion__item-text">
                                             <p>Laboriosam quas, aut consectetur animi autem aliquid consequuntur suscipit exercitationem laborum cupiditate magnam eaque quae delenit</p>
                                         </div>
-                                    </details> 
+                                    </div> 
                                 </div>   
                             </div>
                         </div>
@@ -228,6 +288,7 @@
             </div>
         </div>
     </main>
+    
     <script src="js/jquery-3.6.0.min.js"></script>
 </body>
 </html>
